fixed button styling, fixed functionality of buttons

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
         margin: 5px;
     }
 
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .calculator-button {
         width: 50px;
         height: 50px;
